project/log/20250523_011638.log
Hello DirectX!

clientSize:1280,720

Use Adapater: NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel: 12.2 

Complete create D3D12Device!!!!

Begin CompileShader, path:object3D.VS.hlsl, profile:vs_6_0

Compile Succeded, path:object3D.VS.hlsl, profile:vs_6_0

Begin CompileShader, path:object3D.PS.hlsl, profile:ps_6_0

object3D.PS.hlsl:15:24: error: unknown type name 'VertexShaderQutput'; did you mean 'VertexShaderOutput'?
PixelShaderOutput main(VertexShaderQutput input)
                       ^~~~~~~~~~~~~~~~~~
                       VertexShaderOutput
./Object3d.hlsli:2:8: note: 'VertexShaderOutput' declared here
struct VertexShaderOutput
       ^

